--- a/project.json
+++ b/project.json
@@ -8,7 +8,7 @@
     "renderMode" : 0,
     "engineDir":"frameworks/cocos2d-html5",
 
-    "modules" : ["cocos2d", "cocostudio"],
+    "modules" : ["cocos2d","external"],
 
     "jsList" : [
         "src/resource.js",
@@ -16,6 +16,7 @@
         "src/SystemConst.js",
         "src/SettingScene.js",
         "src/HelpScene.js",
-        "src/GamePlayScene.js"
+        "src/GamePlayScene.js",
+        "src/Enemy.js"
     ]
 }
